--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^6.5.4",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
