--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "i": "^0.3.7",
     "mongoose": "^6.5.4",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "npm": "^8.19.1",
+    "redis": "^4.3.1"
   }
 }
