--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
+    "fs-extra": "^10.1.0",
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
+    "ioredis": "^5.2.4",
     "jalali-moment": "^3.3.11",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^6.5.4",
