--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
@@ -14,7 +15,6 @@
     "express": "~4.16.1",
     "fs-extra": "^10.1.0",
     "http-errors": "~1.6.3",
-    "i": "^0.3.7",
     "ioredis": "^5.2.4",
     "jalali-moment": "^3.3.11",
     "joi": "^17.7.0",
