--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "s",
   "version": "0.0.0",
   "private": true,
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "tsc",
+    "start": "tsc & node .",
+    "dev": "tsc -w & nodemon ."
   },
   "dependencies": {
     "chalk": "^4.0.0",
@@ -12,13 +14,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "fs-extra": "^10.1.0",
     "http-errors": "~1.6.3",
     "ioredis": "^5.2.4",
     "jalali-moment": "^3.3.11",
     "joi": "^17.7.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "mongoose": "^6.5.4",
     "morgan": "~1.9.1",
@@ -27,6 +29,8 @@
     "redis": "^4.3.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
     "coveralls": "^3.0.7",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -42,6 +46,8 @@
     "node-mocks-http": "^1.8.0",
     "nodemon": "^2.0.0",
     "prettier": "^2.0.5",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
