--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc & node .",
-    "dev": "tsc -w & nodemon ."
+    "build": "tsc -W",
+    "start": "tsc -W & node .",
+    "dev": "tsc -W & nodemon ."
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/http-errors": "^2.0.1",
-    "chalk": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
@@ -25,11 +30,17 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "npm": "^8.19.1",
-    "redis": "^4.3.1"
+    "redis": "^4.3.1",
+    "tsc-watch": "^6.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.13.0",
     "coveralls": "^3.0.7",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
