--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "npm": "^8.19.1",
     "redis": "^4.3.1",
-    "tsc-watch": "^6.0.0"
+    "tsc-watch": "^6.0.0",
+    "twilio": "^4.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
