--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s",
+  "name": "MelodyConnect",
   "version": "0.0.0",
   "private": true,
   "main": "dist/server.js",
@@ -9,9 +9,9 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@sentry/node": "^7.63.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/crypto-js": "^4.1.1",
-    "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
@@ -32,10 +32,10 @@
     "npm": "^8.19.1",
     "redis": "^4.3.1",
     "tsc-watch": "^6.0.0",
-    "twilio": "^4.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
