--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.10.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
     "npm": "^8.19.1",
     "redis": "^4.3.1",
     "tsc-watch": "^6.0.0",
